<resources>
    <string name="ip">http://82.156.215.178:8080</string>
    <string name="cat_app_name">猫辅导</string>
    <string name="copyright">Copyright © ZY YWT WZT</string>
    <string name="nav_1">主页</string>
    <string name="nav_2">问答</string>
    <string name="nav_3">我的</string>
    <string name="mine_text">我的</string>
    <string name="home_text">首页</string>
    <string name="question_text">问答</string>
    <string name="ins_item_number">0</string>
    <string name="ins_item_name">无名称</string>
    <string name="ins_item_type" />
    <string name="add_button">add_button</string>
    <string name="test">测试</string>
    <string name="ques_retrieval">实体检索</string>
    <string name="ques_link">实体链接</string>
    <string name="ques_qa">知识问答</string>
    <string name="ques_camera">拍照搜索</string>
    <string name="name">请输入名字</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="me">我</string>
    <string name="settings">设置</string>
    <string name="register">没有账号？注册一个</string>
    <string name="username">用户名</string>
    <string name="set_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="email">邮箱</string>
    <string name="submit">提交</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="detail_type" />
    <string name="text_ins_ques">试题</string>
    <string name="text_ins_related">相关实体</string>
    <string name="text_ques_title">题目</string>
    <string name="submit_button_text">提交</string>
    <string name="sub_number">0</string>
    <string name="sub_name">关联实体</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="weibo_share">微博分享</string>
    <string name="like_text">加入收藏</string>
    <string name="more_text">更多操作</string>
    <string name="share_text">分享至微博：</string>
    <string name="share_summary">我在猫辅导里发现了有趣的知识！快来一起看看吧！</string>
    <string name="send">发送</string>
    <string name="word_cloud">词云生成</string>
    <string name="camera_do">点此拍照搜索知识点</string>
    <string name="order_text">选择学科</string>
    <string name="course_card">学科</string>
    <string name="edit_avatar">修改头像</string>
    <string name="register_text">注册账户</string>
    <string name="modify_text">修改信息</string>
    <string name="recommendation">试题推荐</string>
    <string name="login_text">登录</string>
    <string name="modify_pw">修改密码</string>
</resources>