<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pop_border" >

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/cat_icon"
            android:background="@color/main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/cat_app_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/share_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/share_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_summary"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/cancel"
            android:background="@drawable/cancel_border"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/divider_grey"/>

        <TextView
            android:id="@+id/share_confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/main"
            android:text="@string/confirm"
            android:background="@drawable/cancel_border"/>

    </LinearLayout>
</LinearLayout>