<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/cat_edu"
        android:layout_marginBottom="20dp"
        android:id="@+id/CatEDU"
        ></ImageView>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="300dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="50dp"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:layout_editor_absoluteX="50dp"></EditText>
    <ImageView
        android:id="@+id/show_password"
        android:clickable="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toRightOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        app:layout_constraintBottom_toBottomOf="@id/password"
        android:src="@drawable/hide_password"
        ></ImageView>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:id="@+id/register"
        android:textColor="#0dACF0"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>