<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pop_border" >

    <TextView
        android:id="@+id/share_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/more_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card_border"
                android:scaleType="centerCrop"
                android:src="@mipmap/weibo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/weibo_share"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_like"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card_border"
                android:scaleType="centerCrop"
                android:src="@mipmap/like_no" />

            <TextView
                android:id="@+id/like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/like_text"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/cancel"
        android:background="@drawable/cancel_border"/>

</LinearLayout>