<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:id="@+id/detail_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/main"
            android:contentDescription="@string/back"
            android:paddingStart="0dp"
            android:src="@drawable/back_home_foreground"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginStart="-8dp"
            android:text="@string/back" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@+id/title_bar"
        app:layout_constraintBottom_toBottomOf="@+id/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="left"
        android:id="@+id/username"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:minHeight="48dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/username_sign"
        app:layout_constraintTop_toBottomOf="@id/username"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/username_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edit_username"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@id/edit_username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="left"
        android:id="@+id/set_password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/password_sign"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/set_password"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:id="@+id/password_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="invisible"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_password" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="left"
        android:id="@+id/confirm_password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_border"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/confirm_password_sign"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:id="@+id/confirm_password_sign"
        android:layout_width="30dp"
        android:visibility="invisible"
        android:layout_height="30dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_confirm_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_confirm_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/edit_confirm_password"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="left"
        android:id="@+id/email"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_border"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/email_sign"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:id="@+id/email_sign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_email" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp" />
</androidx.constraintlayout.widget.ConstraintLayout>