<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/detail_back_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/main"
            android:contentDescription="@string/back"
            android:paddingStart="0dp"
            android:src="@drawable/back_home_foreground"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginStart="-8dp"
            android:text="@string/back" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/ques_camera"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@+id/nav"
        app:layout_constraintBottom_toBottomOf="@+id/nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageButton
            android:id="@+id/button_camera"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/camera_do"
            android:scaleType="centerCrop"
            android:background="@drawable/camera_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:lineSpacingExtra="4dp"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/camera_do"/>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.ThreeBounce"
            app:SpinKit_Color="@color/main"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>