<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/detail_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/main"
            android:contentDescription="@string/back"
            android:paddingStart="0dp"
            android:src="@drawable/back_home_foreground"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginStart="-8dp"
            android:text="@string/back" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/edit_avatar"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@+id/title_bar"
        app:layout_constraintBottom_toBottomOf="@+id/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <Button
        android:id="@+id/submit_avatar"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/main"
        android:text="@string/confirm"
        app:layout_constraintTop_toTopOf="@+id/title_bar"
        app:layout_constraintBottom_toBottomOf="@+id/title_bar"
        app:layout_constraintEnd_toEndOf="@id/title_bar" />

    <!--        <TextView-->
<!--            android:id="@+id/title_text"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="4"-->
<!--            android:gravity="center"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:text="修改头像"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16sp" />-->

<!--        <Button-->
<!--            android:id="@+id/submit_avatar"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="2"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginHorizontal="10dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:backgroundTint="@color/white"-->
<!--            android:textColor="@color/main"-->
<!--            android:text="提交" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        android:layout_margin="20dp">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>